--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -81,7 +81,7 @@
 
     </form>
 
-    <a href="/download_pdf" download="generated_pdf.pdf">
+    <a href="/download_pdf" download="SoilHealthCard.pdf">
         <button>Download PDF</button>
     </a>
 
