--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -82,7 +82,7 @@
     </form>
 
     <a href="/download_pdf" download="SoilHealthCard.pdf">
-        <button>Download PDF</button>
+        <button>Download Soil Health Card</button>
     </a>
 
     <script>
