--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Form Page</title>
+    <title>Soil Scan System</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         .tick-mark {
@@ -66,9 +66,6 @@
 
         <label for="electricConductivity">Electric Conductivity:</label>
         <input type="text" name="electricConductivity" id="electricConductivity" required>
-
-        <label for="salinity">Salinity:</label>
-        <input type="text" name="salinity" id="salinity" required>
 
         <label for="temperature">Temperature:</label>
         <input type="text" name="temperature" id="temperature" required>
