image path to be changed

--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -98,7 +98,7 @@
                     $('#' + tickId).show();
     
                     // Display the returned value
-                    $('#responseValue').text('Returned Value: ' + JSON.stringify(response));
+                    $('#responseValue').text(JSON.stringify(response));
                     $('#responseValue').show();
     
                     // Disable form inputs
