--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -126,7 +126,7 @@
                 <label for="sampleCollectionDate">Date of Sample Collection:</label>
                 <input type="date" name="sampleCollectionDate" id="sampleCollectionDate" required max="<?= date('Y-m-d') ?>">
             
-                <label for="surveyNumber">Survey No., Khasra No./Dag No:</label>
+                <label for="surveyNumber">Survey No:</label>
                 <input type="text" name="surveyNumber" id="surveyNumber">
             
                 <label for="farmSize">Farm Size:</label>
