--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -96,6 +96,11 @@
         font-size: 28px; 
         color: #333; 
         }
+        .tick-mark {
+            font-size: 28px;
+            color: #333;
+            margin-left: 10px;
+        }
     </style>
 </head>
 
