--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -18,12 +18,15 @@
         }
         
         header {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #001F3F;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             height: 100px;
             color: #fff;
             padding: 15px;
-            text-align: center;
             font-size: 24px;
             border-bottom: 4px solid #fff;
         }
@@ -100,6 +103,20 @@
             color: #001F3F;
         }
 
+        #logo {
+            position: absolute;
+            right: 80px;
+        }
+
+        #logo img {
+            height: 70px;
+        }
+
+        #title {
+            text-align: center;
+            margin-right: 100px;
+        }
+
         .tick-mark {
             font-size: 28px;
             color: #333;
@@ -112,6 +129,9 @@
 
     <header>
         <h1>Soil Scan System</h1>
+        <div id="logo">
+            <img src="https://www.clipartkey.com/mpngs/m/59-590475_soil-seeds-clipart-healthy-for-free-and-use.png" alt="Logo">
+        </div>
     </header>
 
     <div class="container">
