--- a/templates/Farmer.html
+++ b/templates/Farmer.html
@@ -141,10 +141,10 @@
         }
 
         #widgetContainer {
-            position: absolute;
+            position: fixed;
             top: 15%;
-            left: 5%;
-            width: 200px;
+            left: 3%;
+            width: 450px;
             padding: 15px;
             border-radius: 15px;
             background-color: #fff;
@@ -159,7 +159,7 @@
 
         #widgetContent input[type="button"] {
         width: 100%;
-        height: 50px; 
+        height: 75px; 
         margin-bottom: 10px;
         background-color: #27ae60;
         color: #fff;
@@ -169,9 +169,16 @@
         font-size: 1em;
         transition: background-color 0.3s ease;
         }
-
         #widgetContent input[type="button"]:hover {
             background-color: #219d53;
+        }
+
+        #widgetContent input[type="button"][value="Sign Out"] {
+            background-color: red;
+        }
+
+        #widgetContent input[type="button"][value="Sign Out"]:hover {
+            background-color: red;
         }
 
     </style>
