--- a/templates/index.html
+++ b/templates/index.html
@@ -329,7 +329,8 @@
         </div>
 
         <a href="/download_pdf" download="SoilHealthCard.pdf" class="download-btn">Download Soil Health Card</a>
-
+        
+        <input type="button" value="More Info" onclick="window.location.replace('moreinfo'); ">
     </div>
 
     <!-- Widget Button (Hamburger Icon) -->
